// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders correctly with a comment mention notification 1`] = `
<li
  data-stylename="notification unread"
  onClick={[Function]}
>
  <div
    data-stylename="image-wraper"
  >
    <RoundImage
      url="bar.png"
    />
  </div>
  <div
    data-stylename="content"
  >
    <NotificationHeader
      notification={
        Object {
          "activity": Object {
            "action": "commentMention",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "comment": Object {
              "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
            },
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "activity": Object {
            "action": "commentMention",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "comment": Object {
              "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
            },
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
        }
      }
    />
    <div
      data-stylename="date"
    >
      27 years ago
    </div>
  </div>
</li>
`;

exports[`Notification renders correctly with a comment notification 1`] = `
<li
  data-stylename="notification unread"
  onClick={[Function]}
>
  <div
    data-stylename="image-wraper"
  >
    <RoundImage
      url="bar.png"
    />
  </div>
  <div
    data-stylename="content"
  >
    <NotificationHeader
      notification={
        Object {
          "activity": Object {
            "action": "newComment",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "comment": Object {
              "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
            },
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "activity": Object {
            "action": "newComment",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "comment": Object {
              "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
            },
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
        }
      }
    />
    <div
      data-stylename="date"
    >
      27 years ago
    </div>
  </div>
</li>
`;

exports[`Notification renders correctly with a donation to notification 1`] = `
<li
  data-stylename="notification unread"
  onClick={[Function]}
>
  <div
    data-stylename="image-wraper"
  >
    <RoundImage
      url="bar.png"
    />
  </div>
  <div
    data-stylename="content"
  >
    <NotificationHeader
      notification={
        Object {
          "activity": Object {
            "action": "donation to",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "contributionAmount": 12300,
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "activity": Object {
            "action": "donation to",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "contributionAmount": 12300,
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
        }
      }
    />
    <div
      data-stylename="date"
    >
      27 years ago
    </div>
  </div>
</li>
`;

exports[`Notification renders correctly with a donation to notification 2`] = `
<li
  data-stylename="notification unread"
  onClick={[Function]}
>
  <div
    data-stylename="image-wraper"
  >
    <RoundImage
      url="bar.png"
    />
  </div>
  <div
    data-stylename="content"
  >
    <NotificationHeader
      notification={
        Object {
          "activity": Object {
            "action": "donation from",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "contributionAmount": 12300,
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "activity": Object {
            "action": "donation from",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "contributionAmount": 12300,
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
        }
      }
    />
    <div
      data-stylename="date"
    >
      27 years ago
    </div>
  </div>
</li>
`;

exports[`Notification renders correctly with a join request notification 1`] = `
<li
  data-stylename="notification unread"
  onClick={[Function]}
>
  <div
    data-stylename="image-wraper"
  >
    <RoundImage
      url="bar.png"
    />
  </div>
  <div
    data-stylename="content"
  >
    <NotificationHeader
      notification={
        Object {
          "activity": Object {
            "action": "joinRequest",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "group": Object {
              "name": "Foomunity",
            },
            "meta": Object {},
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 3,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "activity": Object {
            "action": "joinRequest",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "group": Object {
              "name": "Foomunity",
            },
            "meta": Object {},
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 3,
        }
      }
    />
    <div
      data-stylename="date"
    >
      27 years ago
    </div>
  </div>
</li>
`;

exports[`Notification renders correctly with a mention notification 1`] = `
<li
  data-stylename="notification unread"
  onClick={[Function]}
>
  <div
    data-stylename="image-wraper"
  >
    <RoundImage
      url="bar.png"
    />
  </div>
  <div
    data-stylename="content"
  >
    <NotificationHeader
      notification={
        Object {
          "activity": Object {
            "action": "mention",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "meta": Object {},
            "post": Object {
              "title": "Heads up",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 5,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "activity": Object {
            "action": "mention",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "meta": Object {},
            "post": Object {
              "title": "Heads up",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 5,
        }
      }
    />
    <div
      data-stylename="date"
    >
      27 years ago
    </div>
  </div>
</li>
`;

exports[`Notification renders correctly with a tag notification 1`] = `
<li
  data-stylename="notification unread"
  onClick={[Function]}
>
  <div
    data-stylename="image-wraper"
  >
    <RoundImage
      url="baz.png"
    />
  </div>
  <div
    data-stylename="content"
  >
    <NotificationHeader
      notification={
        Object {
          "activity": Object {
            "action": "tag",
            "actor": Object {
              "avatarUrl": "baz.png",
              "id": 3,
              "name": "Arthur Fonzarelli",
            },
            "meta": Object {
              "reasons": Array [
                "tag: request",
              ],
            },
            "post": Object {
              "title": "I have so many things I need!",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 2,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "activity": Object {
            "action": "tag",
            "actor": Object {
              "avatarUrl": "baz.png",
              "id": 3,
              "name": "Arthur Fonzarelli",
            },
            "meta": Object {
              "reasons": Array [
                "tag: request",
              ],
            },
            "post": Object {
              "title": "I have so many things I need!",
            },
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 2,
        }
      }
    />
    <div
      data-stylename="date"
    >
      27 years ago
    </div>
  </div>
</li>
`;

exports[`Notification renders correctly with an approved join request notification 1`] = `
<li
  data-stylename="notification unread"
  onClick={[Function]}
>
  <div
    data-stylename="image-wraper"
  >
    <RoundImage
      url="bar.png"
    />
  </div>
  <div
    data-stylename="content"
  >
    <NotificationHeader
      notification={
        Object {
          "activity": Object {
            "action": "approvedJoinRequest",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "group": Object {
              "name": "Foomunity",
            },
            "meta": Object {},
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 4,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "activity": Object {
            "action": "approvedJoinRequest",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "group": Object {
              "name": "Foomunity",
            },
            "meta": Object {},
            "unread": true,
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 4,
        }
      }
    />
    <div
      data-stylename="date"
    >
      27 years ago
    </div>
  </div>
</li>
`;

exports[`NotificationBody renders correctly with a comment mention notification 1`] = `
<div
  data-stylename="body"
>
  <span
    data-stylename="bold"
  >
    Marie
  </span>
   wrote: 
  "
  I live right next to there and can come help out. I've never done …
  "
</div>
`;

exports[`NotificationBody renders correctly with a comment notification 1`] = `
<div
  data-stylename="body"
>
  <span
    data-stylename="bold"
  >
    Marie
  </span>
   wrote: 
  "
  I live right next to there and can come help out. I've never done …
  "
</div>
`;

exports[`NotificationBody renders correctly with a donation from notification 1`] = `
<div
  data-stylename="body"
>
  <span
    data-stylename="bold"
  >
    Marie Curie
  </span>
   
  contributed {{amount}} to "{{postSummary}}"
</div>
`;

exports[`NotificationBody renders correctly with a donation to notification 1`] = `
<div
  data-stylename="body"
>
  <span
    data-stylename="bold"
  >
    You
  </span>
   
  contributed {{amount}} to "{{postSummary}}"
</div>
`;

exports[`NotificationBody renders correctly with a join request notification 1`] = `
<div
  data-stylename="body"
>
  <span
    data-stylename="bold"
  >
    Marie Curie
     
  </span>
  asked to join
  <span
    data-stylename="bold"
  >
     
    Foomunity
  </span>
</div>
`;

exports[`NotificationBody renders correctly with a mention notification 1`] = `
<div
  data-stylename="body"
>
  <span
    data-stylename="bold"
  >
    Marie
  </span>
   
  wrote:
   
  "
  Heads up
  "
</div>
`;

exports[`NotificationBody renders correctly with a tag notification 1`] = `
<div
  data-stylename="body"
>
  <span
    data-stylename="bold"
  >
    Arthur
  </span>
   
  wrote:
   
  "
  I have so many things I need!
  "
</div>
`;

exports[`NotificationBody renders correctly with an announcement notification 1`] = `
<div
  data-stylename="body"
>
  <span
    data-stylename="bold"
  >
    Marie Curie
  </span>
   
  wrote: 
   
  Announcement
</div>
`;

exports[`NotificationBody renders correctly with an approved join request notification 1`] = `
<div
  data-stylename="body"
>
  <span
    data-stylename="bold"
  >
    Marie Curie
     
  </span>
  approved your request to join
  <span
    data-stylename="bold"
  >
     
    Foomunity
  </span>
</div>
`;

exports[`NotificationHeader renders correctly with a comment mention notification 1`] = `
<div
  data-stylename="header"
>
  <span
    data-stylename="bold"
  >
    Marie Curie
     
  </span>
  mentioned you in a comment on
  <span
    data-stylename="bold"
  >
     
    Our Oceans
  </span>
</div>
`;

exports[`NotificationHeader renders correctly with a comment notification 1`] = `
<div
  data-stylename="header"
>
  New Comment on 
   
  <span
    data-stylename="bold"
  >
    Our Oceans
  </span>
</div>
`;

exports[`NotificationHeader renders correctly with a donation from notification 1`] = `
<div
  data-stylename="header"
>
  <span
    data-stylename="bold"
  >
    Marie Curie
     
  </span>
  contributed to your project
</div>
`;

exports[`NotificationHeader renders correctly with a donation to notification 1`] = `
<div
  data-stylename="header"
>
  <span
    data-stylename="bold"
  >
    You
     
  </span>
  contributed to a project
</div>
`;

exports[`NotificationHeader renders correctly with a join request notification 1`] = `
<div
  data-stylename="header"
>
  New Join Request
</div>
`;

exports[`NotificationHeader renders correctly with a mention notification 1`] = `
<div
  data-stylename="header"
>
  <span
    data-stylename="bold"
  >
    Marie Curie
     
  </span>
  mentioned you
</div>
`;

exports[`NotificationHeader renders correctly with a tag notification 1`] = `
<div
  data-stylename="header"
>
  New Post in 
   
  <span
    data-stylename="bold"
  >
    request
  </span>
</div>
`;

exports[`NotificationHeader renders correctly with an approved join request notification 1`] = `
<div
  data-stylename="header"
>
  Join Request Approved
</div>
`;

exports[`NotificationsDropdown renders correctly with a list of threads 1`] = `
<TopNavDropdown
  body={
    <div
      data-stylename="notifications"
    >
      <Notification
        notification={
          Object {
            "activity": Object {
              "action": "newComment",
              "actor": Object {
                "avatarUrl": "bar.png",
                "id": 2,
                "name": "Marie Curie",
              },
              "comment": Object {
                "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
              },
              "meta": Object {},
              "post": Object {
                "title": "Our Oceans",
              },
              "unread": true,
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 1,
          }
        }
        onClick={[Function]}
      />
      <Notification
        notification={
          Object {
            "activity": Object {
              "action": "tag",
              "actor": Object {
                "avatarUrl": "baz.png",
                "id": 3,
                "name": "Arthur Fonzarelli",
              },
              "meta": Object {
                "reasons": Array [
                  "tag: request",
                ],
              },
              "post": Object {
                "title": "I have so many things I need!",
              },
              "unread": true,
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 2,
          }
        }
        onClick={[Function]}
      />
      <Notification
        notification={
          Object {
            "activity": Object {
              "action": "newComment",
              "actor": Object {
                "avatarUrl": "bar.png",
                "id": 2,
                "name": "Marie Curie",
              },
              "comment": Object {
                "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
              },
              "meta": Object {},
              "post": Object {
                "title": "Our Oceans",
              },
              "unread": true,
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 1,
            "unread": false,
          }
        }
        onClick={[Function]}
      />
      <Notification
        notification={
          Object {
            "activity": Object {
              "action": "tag",
              "actor": Object {
                "avatarUrl": "baz.png",
                "id": 3,
                "name": "Arthur Fonzarelli",
              },
              "meta": Object {
                "reasons": Array [
                  "tag: request",
                ],
              },
              "post": Object {
                "title": "I have so many things I need!",
              },
              "unread": true,
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 2,
            "unread": false,
          }
        }
        onClick={[Function]}
      />
      <Notification
        notification={
          Object {
            "activity": Object {
              "action": "joinRequest",
              "actor": Object {
                "avatarUrl": "bar.png",
                "id": 2,
                "name": "Marie Curie",
              },
              "group": Object {
                "name": "Foomunity",
              },
              "meta": Object {},
              "unread": true,
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 3,
          }
        }
        onClick={[Function]}
      />
      <Notification
        notification={
          Object {
            "activity": Object {
              "action": "approvedJoinRequest",
              "actor": Object {
                "avatarUrl": "bar.png",
                "id": 2,
                "name": "Marie Curie",
              },
              "group": Object {
                "name": "Foomunity",
              },
              "meta": Object {},
              "unread": true,
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 4,
          }
        }
        onClick={[Function]}
      />
      <Notification
        notification={
          Object {
            "activity": Object {
              "action": "mention",
              "actor": Object {
                "avatarUrl": "bar.png",
                "id": 2,
                "name": "Marie Curie",
              },
              "meta": Object {},
              "post": Object {
                "title": "Heads up",
              },
              "unread": true,
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 5,
          }
        }
        onClick={[Function]}
      />
      <Notification
        notification={
          Object {
            "activity": Object {
              "action": "commentMention",
              "actor": Object {
                "avatarUrl": "bar.png",
                "id": 2,
                "name": "Marie Curie",
              },
              "comment": Object {
                "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
              },
              "meta": Object {},
              "post": Object {
                "title": "Our Oceans",
              },
              "unread": true,
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 1,
          }
        }
        onClick={[Function]}
      />
    </div>
  }
  header={
    <div
      data-stylename="header-content"
    >
      <span
        data-stylename="tab active"
        onClick={[Function]}
      >
        Recent
      </span>
      <span
        data-stylename="tab"
        onClick={[Function]}
      >
        Unread
      </span>
      <span
        data-stylename="mark-read"
      >
        Mark all as read
      </span>
    </div>
  }
  onToggle={[Function]}
  toggleChildren={
    <span>
      click me
    </span>
  }
/>
`;

exports[`NotificationsDropdown renders correctly with an empty list 1`] = `
<TopNavDropdown
  body={
    <NoItems
      message="No notifications"
    />
  }
  header={
    <div
      data-stylename="header-content"
    >
      <span
        data-stylename="tab active"
        onClick={[Function]}
      >
        Recent
      </span>
      <span
        data-stylename="tab"
        onClick={[Function]}
      >
        Unread
      </span>
      <span
        data-stylename="mark-read"
      >
        Mark all as read
      </span>
    </div>
  }
  onToggle={[Function]}
  toggleChildren={
    <span>
      click me
    </span>
  }
/>
`;
